--- a/public/index.html
+++ b/public/index.html
@@ -3,13 +3,22 @@
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Country Finder"
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <meta property="og:title" content="Country Finder">
+    <meta property="og:description" content="Country Finder">
+    <meta property="og:image" content="https://firebasestorage.googleapis.com/v0/b/shaigarusicom.appspot.com/o/country-finder-ogimage-min.jpeg?alt=media">
+    <meta name="twitter:card" content="summary_large_image">
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/touch-icon-iphone.png">
+    <link rel="apple-touch-icon" sizes="152x152" href="%PUBLIC_URL%/touch-icon-ipad.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="%PUBLIC_URL%/touch-icon-iphone-retina.png">
+    <link rel="apple-touch-icon" sizes="167x167" href="%PUBLIC_URL%/touch-icon-ipad-retina.png">
+    <link rel="apple-touch-startup-image" href="%PUBLIC_URL%/touch-icon-iphone.png">
+    <meta name="apple-mobile-web-app-title" content="COTI Staking Rewards Calculator">
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
@@ -24,7 +33,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>Country Finder</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
